<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.constraint.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="product_name_label,product_price_label,quantity_label,supplier_name_label,supplier_phone_label"
        tools:layout_editor_absoluteX="384dp" />

    <TextView
        android:id="@+id/product_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/product_label_textView_marginLeft"
        android:layout_marginStart="@dimen/product_label_textView_marginStart"
        android:layout_marginTop="@dimen/product_label_textView_marginTop"
        android:text="@string/product_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/price_label_textView_marginLeft"
        android:layout_marginStart="@dimen/price_label_textView_marginStart"
        android:layout_marginTop="@dimen/price_label_textView_marginTop"
        android:text="@string/product_price_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_label" />

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/quantity_label_textView_marginLeft"
        android:layout_marginStart="@dimen/quantity_label_textView_marginStart"
        android:layout_marginTop="@dimen/quantity_label_textView_marginTop"
        android:text="@string/quantity_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_price_label" />

    <TextView
        android:id="@+id/supplier_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/supplier_name_label_textView_marginLeft"
        android:layout_marginStart="@dimen/supplier_name_label_textView_marginStart"
        android:layout_marginTop="@dimen/supplier_name_label_textView_marginTop"
        android:text="@string/supplier_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_label" />

    <TextView
        android:id="@+id/supplier_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/supplier_phone_label_textView_marginLeft"
        android:layout_marginStart="@dimen/supplier_phone_label_textView_marginStart"
        android:layout_marginTop="@dimen/supplier_phone_label_textView_marginTop"
        android:text="@string/supplier_phone_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supplier_name_label" />

    <TextView
        android:id="@+id/detail_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_textView_marginTop"
        app:layout_constraintStart_toEndOf="@+id/barrier6"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Widget" />

    <TextView
        android:id="@+id/detail_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/price_textView_marginTop"
        app:layout_constraintStart_toEndOf="@+id/barrier6"
        app:layout_constraintTop_toBottomOf="@+id/detail_product_name"
        tools:text="9.99" />

    <TextView
        android:id="@+id/detail_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/quantity_textView_marginBottom"
        android:layout_marginTop="@dimen/quantity_textView_marginTop"
        app:layout_constraintBottom_toTopOf="@+id/barrier2"
        app:layout_constraintStart_toEndOf="@+id/barrier6"
        app:layout_constraintTop_toBottomOf="@+id/detail_product_price"
        app:layout_constraintVertical_bias="0.0"
        tools:text="5" />

    <Button
        android:id="@+id/detail_add_quantity"
        android:layout_width="@dimen/add_button_layoutWidth"
        android:layout_height="@dimen/add_button_layoutHeight"
        android:layout_marginEnd="@dimen/add_quantity_button_marginEnd"
        android:layout_marginLeft="@dimen/add_quantity_button_marginLeft"
        android:layout_marginRight="@dimen/add_quantity_button_marginRight"
        android:layout_marginStart="@dimen/add_quantity_button_marginStart"
        android:layout_marginTop="@dimen/add_quantity_button_marginTop"
        android:text="@string/add_button_text"
        app:layout_constraintEnd_toStartOf="@+id/detail_subtract_quantity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/detail_quantity"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/detail_subtract_quantity"
        android:layout_width="@dimen/subtract_button_layoutWidth"
        android:layout_height="@dimen/subtract_button_layoutHeight"
        android:layout_marginEnd="@dimen/subtract_button_marginEnd"
        android:layout_marginRight="@dimen/subtract_button_marginRight"
        android:text="@string/subtract_button_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_add_quantity"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detail_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/supplier_name_label"
        app:layout_constraintStart_toEndOf="@+id/barrier6"
        tools:text="Jim" />

    <TextView
        android:id="@+id/detail_supplier_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/supplier_phone_marginEnd"
        android:layout_marginRight="@dimen/supplier_phone_marginRight"
        app:layout_constraintBaseline_toBaselineOf="@+id/supplier_phone_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="555-555-1212" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detail_editFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/editFab_marginBottom"
        android:layout_marginEnd="@dimen/editFab_marginEnd"
        android:layout_marginRight="@dimen/editFab_marginRight"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/outline_create_white_18" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="detail_product_name,detail_product_price,detail_quantity,detail_supplier_name,detail_supplier_phone"
        tools:layout_editor_absoluteX="384dp" />

    <ImageButton
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/call_button_marginLeft"
        android:layout_marginStart="@dimen/call_button_marginStart"
        android:layout_marginTop="@dimen/call_button_marginTop"
        android:src="@drawable/baseline_phone_black_18"
        android:text="Call Supplier"
        app:layout_constraintStart_toEndOf="@+id/detail_supplier_phone"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="quantity_label,detail_quantity,detail_add_quantity,detail_subtract_quantity"
        tools:layout_editor_absoluteY="511dp" />


</android.support.constraint.ConstraintLayout>